# lab06

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION  LICENSE  README.md  REPORT.md
.github/workflows/: release.yml
formatter_lib/: CMakeLists.txt
hello_world_application/: CMakeLists.txt
solver_application/: CMakeLists.txt
solver_lib/: solver.cpp
